fix: reduce font size of ticks on mobile devices

--- a/src/budgeteer/Savings/SavingsChart/savingsChart.scss
+++ b/src/budgeteer/Savings/SavingsChart/savingsChart.scss
@@ -24,6 +24,14 @@
 	overflow: hidden;
 }
 
+@media all and (max-width: 600px) {
+
+	.recharts-text.recharts-cartesian-axis-tick-value {
+		font-size: 0.85em;
+	}
+
+}
+
 .savings-chart {
 	position: relative;
 	margin: 0 auto;
